# AgenticWorkflow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
StockTrack/: README.md  requirements.txt  stock-track-agent.md  stock-track-agent.py  stock-track-agent.txt  stocks.txt
StockTrack/output/: stock-track-agent_report_20260620_145824.html  stock-track-agent_report_20260620_145824.txt
StockTrack/stock-track-agent/skills/: SKILL.md  html_generator.py  new_extractor.py  new_stock_tracker.py  news_extractor.py  stock_extractor.py  tradingview_extractor.py
agentic_workflow/: __init__.py  cli.py  config.py
agents/: __init__.py  base.py  coding.py  coordinator.py  critic.py  data_analyst.py  executor.py  planner.py  researcher.py  reviewer.py
api/: __init__.py  main.py
api/routes/: agents.py  health.py  metrics.py  workflows.py
configs/: default.yaml
evaluations/: __init__.py  benchmarks.py
examples/: __init__.py  financial_analysis_agent.py  news_monitoring_agent.py  resume_review_agent.py  stock_research_agent.py
memory/: __init__.py  base.py  long_term.py  short_term.py  vector_store.py
observability/: __init__.py  logger.py  metrics.py  tracer.py
prompts/: __init__.py  templates.py
scripts/: run_examples.py
tests/: __init__.py  test_agents.py  test_api.py  test_config.py  test_memory.py  test_observability.py  test_tools.py  test_workflows.py
tools/: __init__.py  base.py  database.py  file_operations.py  python_exec.py  shell.py  web_search.py
workflows/: __init__.py  base.py  conditional.py  multi_agent.py  parallel.py  sequential.py
